# adls-acl

./: .coveragerc  LICENSE  MANIFEST.in  README.md  TODO.md  acl.py  input_parser.py  nodes.py  oldstuff.py  orchestrator.py  pyproject.toml  schema.yml  setup.py  test.py  test_acl.yml  tox.ini
.github/workflows/: pypi-publish.yml  testpypi-publish.yml  tests.yml
aam/: cli.py  input_parser.py  orchestrator.py  test_nodes.py
adls-acl-manager/: adls-acl-manager.py  nodes.py  orchestrator.py
adls_acl/: cli.py  orchestrator.py
src/adls_acl/: __init__.py  auth.py  cli.py  input_parser.py  logger.py  nodes.py  orchestrator.py
tests/: test_auth.py  test_nodes.py  test_orchestrator.py
