[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adls_acl"
version = "0.1.1b0"
authors = [{ name = "Karol Luszczek" }]
description = "A small tool for managing Azure DataLake Store (ADLS) Access Control Lists (ACLs)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "yamale",
    "azure-storage-file-datalake",
    "azure-identity",
    "click",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/karolusz/adls-acl"

[project.scripts]
adls-acl = "adls_acl.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock", "bumpver"]

# ---
# Setuptools
# ---
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# ---
# BumpVer
# ---
[tool.bumpver]
current_version = "0.1.1b0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/adls_acl/__init__.py" = ["{version}"]
